tests/baselines/reference/exportAssignmentTopLevelEnumdule.errors.txt
foo_1.ts(3,4): error TS2454: Variable 'color' is used before being assigned.


==== foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
    var color: foo;
    if(color === foo.green){
       ~~~~~
!!! error TS2454: Variable 'color' is used before being assigned.
    	color = foo.answer;
    }
    
==== foo_0.ts (0 errors) ====
    enum foo {
    	red, green, blue
    }
    module foo {
    	export var answer = 42;
    }
    export = foo;
    